<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="select_one_toast">Please, Select One Option</string>

    <!-- Notification -->
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_channel_id" translatable="false">load_channel</string>
    <string name="notification_channel_name">Load</string>
    <string name="notification_channel_description">Load State Indicator</string>

    <string name="notification_button">Check the status</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Radio Buttons -->
    <string name="radio_button1_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button2_text">LoadApp - Current Repository by Udacity</string>
    <string name="radio_button3_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    
    <!-- Details Activity -->
    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="ok_button">OK</string>

    <!-- Shared Preferences -->
    <string name="key1" tools:ignore="Typos">key1</string>
    <string name="key2">key2</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>

    <!-- LoadingButton -->
    <string name="button_text">Download</string>
    <string name="button_loading">We are loading</string>

    <!-- Content Descriptions -->
    <string name="fab_content_description">E-mail</string>
    <string name="image_view_content_description">Content Description</string>
</resources>
