<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/download_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/image_view_content_description"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintTop_toBottomOf="@+id/download_image">

        <RadioButton
            android:id="@+id/glide_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_buttons_margin"
            android:text="@string/radio_button1_text"
            android:textSize="@dimen/radio_buttons_text_size" />

        <RadioButton
            android:id="@+id/current_repository_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_buttons_margin"
            android:text="@string/radio_button2_text"
            android:textSize="@dimen/radio_buttons_text_size" />

        <RadioButton
            android:id="@+id/retrofit_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_buttons_margin"
            android:text="@string/radio_button3_text"
            android:textSize="@dimen/radio_buttons_text_size" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundButtonColor="@color/colorPrimaryDark"
        app:circleProgressColor="@color/colorAccent"
        app:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>